--- a/Anits.html
+++ b/Anits.html
@@ -3,15 +3,15 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" type="image/jpg" href="/images/anits.jpg">
+        <link rel="icon" type="image/jpg" href="anits.jpg">
         <title>ANITS</title>
     </head>
     <frameset rows="20%,5%,75%" >
-        <frame name="top" src="/html/Top.html">
-        <frame name="nav" src="/html/nav.html">
+        <frame name="top" src="Top.html">
+        <frame name="nav" src="nav.html">
             <frameset cols="25%,75%" >
-                <frame name="left" src="/html/Left.html">
-                <frame name="right" src="/html/Right.html">
+                <frame name="left" src="Left.html">
+                <frame name="right" src="Right.html">
             </frameset>
     </frameset>
 </html>
