--- a/Left.html
+++ b/Left.html
@@ -29,28 +29,28 @@
 <body>
    <h2>DEPARTMENTS</h2>
    <ul class="menu" type="none">
-    <a href="/html/CSE.html" target="right" ><li>CSE</li></a>
-    <a href="/html/ECE.html" target="right" ><li>ECE</li></a>
-    <a href="/html/EEE.html" target="right" ><li>EEE</li></a>
-    <a href="/html/MECH.html" target="right" ><li>MECH</li></a>
-    <a href="/html/CHEM.html" target="right" ><li>CHEM</li></a>
-    <a href="/html/CIVIL.html" target="right" ><li>CIVIL</li></a>
+    <a href="CSE.html" target="right" ><li>CSE</li></a>
+    <a href="ECE.html" target="right" ><li>ECE</li></a>
+    <a href="EEE.html" target="right" ><li>EEE</li></a>
+    <a href="MECH.html" target="right" ><li>MECH</li></a>
+    <a href="CHEM.html" target="right" ><li>CHEM</li></a>
+    <a href="CIVIL.html" target="right" ><li>CIVIL</li></a>
    </ul>
 
    <h2>UNIVERSITIES</h2>
    <ul class="menu" type="none">
-    <a href="/html/Univ_data.html" target="right" ><li>UNIV-DATA</li></a>
-    <a href="/html/AU_data.html" target="right" ><li>AU</li></a>
-    <a href="/html/JNTU_data.html" target="right"><li>JNTU</li></a>
+    <a href="Univ_data.html" target="right" ><li>UNIV-DATA</li></a>
+    <a href="AU_data.html" target="right" ><li>AU</li></a>
+    <a href="JNTU_data.html" target="right"><li>JNTU</li></a>
    </ul>
 
-   <a href="/html/Time_Table.html" target="right"><h3 style="color:red">TIME-TABLE</h3></a>
+   <a href="Time_Table.html" target="right"><h3 style="color:red">TIME-TABLE</h3></a>
    
-   <a href="/html/Resume.html" target="right"><h3 style="color:red">RESUME</h3></a>
+   <a href="Resume.html" target="right"><h3 style="color:red">RESUME</h3></a>
    
-   <a href="/html/game.html" target="right"><h3 style="color:red">GAME</h3></a>
+   <a href="game.html" target="right"><h3 style="color:red">GAME</h3></a>
 
-   <a href="/html/clock.html" target="right"><h3 style="color:red">CLOCK</h3></a>
+   <a href="clock.html" target="right"><h3 style="color:red">CLOCK</h3></a>
    
 </body>
 </html>
