--- a/Right.html
+++ b/Right.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="/images/clg.jpg" width="100%">
+    <img src="clg.jpg" width="100%">
 </body>
 </html>
