--- a/Top.html
+++ b/Top.html
@@ -28,7 +28,7 @@
 </head>
 <body>
     <div>
-        <img src="/images/anits.jpg">
+        <img src="anits.jpg">
         <h1><marquee> ANIL NEERUKONDA INSTITUTE OF TECHNOLOGY AND SCIENCES </marquee></h1>
     </div>
 </body>
