--- a/nav.html
+++ b/nav.html
@@ -38,8 +38,8 @@
 <body>
     <nav class="navigation" height="100%">
         <ul>
-            <li><a href="/html/Login.html" target="right">Login</a></li>
-            <li><a href="/html/Registration.html" target="right">Registration</a></li>
+            <li><a href="Login.html" target="right">Login</a></li>
+            <li><a href="Registration.html" target="right">Registration</a></li>
             <li><a href="">Catalog</a></li>
             <li><a href="">Cart</a></li>
         </ul>
